<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WeatherApp</string>
    <string name="title_activity_current_location_info">CurrentLocationInfo</string>
    <string name="action_settings">Settings</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="image_view_description">sun/moonIcon</string>
    <string name="latitude">Szerokość geograficzna</string>
    <string name="longitude">Długość geograficzna</string>
    <string name="date">Data</string>
    <string name="time">Czas</string>
    <string name="sunrise">Wschód słońca:</string>
    <string name="sunset">Zachód słońca:</string>
    <string name="twillight_morning">Zmierzch cywilny:</string>
    <string name="twillight_evening">Świt cywilny:</string>
    <string name="change_date_location">Zmień datę / lokalizację</string>
    <string name="change_location">Lokalizacja</string>
    <string name="applogo">appLogo</string>
    <string name="app_name_main">Aplikacja pogodowa</string>
    <string name="sun_moon_data">Dane Słońce/Księżyc</string>
    <string name="actual_weather">Aktualna pogoda</string>
    <string name="about">O programie</string>
    <string name="moon_icon">moonIcon</string>
    <string name="moonrise">Wschód księżyca:</string>
    <string name="moonset">Zachód księżyca:</string>
    <string name="next_full_moon">Najbliższa pełnia:</string>
    <string name="next_new_moon">Najbliższy nów:</string>
    <string name="sun_icon">sunIcon</string>
    <string name="version">Wersja: </string>
    <string name="version_number">1.0.0</string>
    <string name="author" tools:ignore="Typos">Autor: </string>
    <string name="author_name">Mateusz Sędkowski</string>
    <string name="moon_age">Dzień miesiąca synodycznego: </string>
    <string name="moon_phase">Faza księżyca: </string>
    <string name="PL_0">Tornado!</string>
    <string name="PL_1">Burza tropikalna!</string>
    <string name="PL_2">Huragan!</string>
    <string name="PL_3">Silne burze!</string>
    <string name="PL_4">Burze!</string>
    <string name="PL_5">Śnieg z deszczem</string>
    <string name="PL_6">Deszcz i deszcz ze śniegiem</string>
    <string name="PL_7">Śnieg i śnieg z deszczem</string>
    <string name="PL_8">Marznąca mżawka</string>
    <string name="PL_9">Mżawka</string>
    <string name="PL_10">Marznący deszcz</string>
    <string name="PL_11">Przelotny deszcz</string>
    <string name="PL_12">Przelotny deszcz</string>
    <string name="PL_13">Podmuchy śniegu</string>
    <string name="PL_14">Niewielki opad śniegu</string>
    <string name="PL_15">Śnieg podmuchowy</string>
    <string name="PL_16">Śnieg</string>
    <string name="PL_17">Grad</string>
    <string name="PL_18">Śnieg z deszczem</string>
    <string name="PL_19">Burza piaskowa</string>
    <string name="PL_20">Mgliście</string>
    <string name="PL_21">Zamglenie</string>
    <string name="PL_22">Zadymienie</string>
    <string name="PL_23">Wietrznie</string>
    <string name="PL_24">Wietrznie</string>
    <string name="PL_25">Zimno</string>
    <string name="PL_26">Pochmurnie</string>
    <string name="PL_27">Duże wieczorne zachmurzenie</string>
    <string name="PL_28">Duże zachmurzenie</string>
    <string name="PL_29">Częściowe wieczorne zachmurzenie</string>
    <string name="PL_30">Częściowe zachmurzenie</string>
    <string name="PL_31">Czyste wieczorne niebo</string>
    <string name="PL_32">Słonecznie</string>
    <string name="PL_33">Pogodnie</string>
    <string name="PL_34">Pogodnie</string>
    <string name="PL_35">Deszcz z gradem</string>
    <string name="PL_36">Gorąco</string>
    <string name="PL_37">Pojedyncze burze</string>
    <string name="PL_38">Rozproszone burze</string>
    <string name="PL_39">Rozproszone burze</string>
    <string name="PL_40">Przelotne opady</string>
    <string name="PL_41">Duże opady śniegu</string>
    <string name="PL_42">Rozległe opady śnieżne</string>
    <string name="PL_43">Duże opady śniegu</string>
    <string name="PL_44">Częściowe zachmurzenie</string>
    <string name="PL_45">Ulewny deszcz w czasie burzy</string>
    <string name="PL_46">Opady śniegu</string>
    <string name="PL_47">Przejściowe ulewne deszcze w czasie burzy</string>
    <string name="PL_3200">Dane pogodowe nie dostępne</string>
    <string name="temperature">Temperatura:</string>
    <string name="pressure">Ciśnienie:</string>
    <string name="humidity">Wilgotność:</string>
    <string name="tempMax">Temp. maksymalna:</string>
    <string name="tempMin">Temp. minimalna:</string>
    <string name="PL_Mon">Poniedziałek</string>
    <string name="PL_Tue">Wtorek</string>
    <string name="PL_Wed">Środa</string>
    <string name="PL_Thu">Czwartek</string>
    <string name="PL_Fri">Piątek</string>
    <string name="PL_Sat">Sobota</string>
    <string name="PL_Sun">Niedziela</string>
    <string name="refresh">Odśwież</string>
    <string name="wind">Prędkość wiatru</string>
    <string name="saved_locations">Zapisane lokalizacje</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
